--- a/static/hw/hw-01.Rmd
+++ b/static/hw/hw-01.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lista de Exercícios 1"
-date: "Entrega: 19/03/2018 via Moodle (até as 23:59)"
+date: "Entrega: 12/12/2020 via Moodle (até as 23:59)"
 output: 
   html_document: 
     css: hw.css
@@ -83,6 +83,6 @@ knitr::include_graphics("img/header2.png")
 4) Faça um gráfico de dispersão da velocidade do vento por ano. Há alguma tendência de mudança da velocidade do vento ao longo do século XX?
 
 
-## Resolução
+<!-- ## Resolução -->
 
-Sugestão de respostas: [Resolução Lista 1](./resolucao/lista-01-resolucao.html)
+<!-- Sugestão de respostas: [Resolução Lista 1](./resolucao/lista-01-resolucao.html) -->
