--- a/static/slides/03-principais_funcoes.Rmd
+++ b/static/slides/03-principais_funcoes.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "21 de março de 2018"
+date: "15 de dezembro de 2020"
 subtitle: "03 - Principais Funções e Operações"
 
 output:
