--- a/static/hw/hw-01.Rmd
+++ b/static/hw/hw-01.Rmd
@@ -83,6 +83,6 @@ knitr::include_graphics("img/header2.png")
 4) Faça um gráfico de dispersão da velocidade do vento por ano. Há alguma tendência de mudança da velocidade do vento ao longo do século XX?
 
 
-<!-- ## Resolução -->
+## Resolução
 
-<!-- Sugestão de respostas: [Resolução Lista 1](./resolucao/lista-01-resolucao.html) -->
+Sugestão de respostas: [Resolução Lista 1](./resolucao/lista-01-resolucao.html)
