1st class week #4

--- a/public/slides/05-graficos.Rmd
+++ b/public/slides/05-graficos.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "28 de março de 2018"
+date: "05 de janeiro de 2021"
 subtitle: "05 - Gráficos no R"
 
 output:
