--- a/static/slides/07-principais_distribuicoes.Rmd
+++ b/static/slides/07-principais_distribuicoes.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "04 de abril de 2018"
+date: "12 de janeiro de 2021"
 subtitle: "07 - Principais Distribuições Estatísticas"
 
 output:
@@ -11,7 +11,8 @@ output:
     highlight: pygments
     logo: img/logo_ufmg.png
     widescreen: true
-    self_contained: false
+    # self_contained: false
+    self_contained: true
     lib_dir: libs
   beamer_presentation:
     highlight: pygments
@@ -72,7 +73,7 @@ file_name = "07-principais_distribuicoes"
 
   > - **Variáveis discretas**: a distribuição de probabilidade é caracterizada pela função de probabilidade $p_X(x) = \mathbb{P}(X=x)$ para $x \in \mathbb{N}$.
 
-  > - **Variáveis contínuas**: a disttribuição de probabilidade é definida pela função de densidade $f_X(x)$ (versão infinitesimal de $p_X$, tal que $f_X(x)dx=\mathbb{P}(X \in [x,x+dx])$).
+  > - **Variáveis contínuas**: a distribuição de probabilidade é definida pela função de densidade $f_X(x)$ (versão infinitesimal de $p_X$, tal que $f_X(x)dx=\mathbb{P}(X \in [x,x+dx])$).
 
   > - **Variáveis mistas**: a variável tem partes contínua e discreta. Definimos a variável aleatória com a função de distribuição acumulada $F_X(x) = \mathbb{P}(X \leq x)$.
 
@@ -136,7 +137,7 @@ que é conhecida como <span class="blue3">**distribuição Gama**</span>.
 
 ## Distribuições contínuas de Pearson
 
-```{r echo=FALSE, fig.align='center', fig.width=9, fig.height=5, message=FALSE}
+```{r echo=FALSE, fig.align='center', fig.width=9, fig.height=5, message=FALSE, warning=FALSE}
 # distribuições de Pearson
 library(PearsonDS)
 x <- seq(-1, 6, by=1e-3)
@@ -253,7 +254,7 @@ f4 <- function(x) f(1/x)/x^2
 f5 <- function(x) f(exp(x))*exp(x)
 f6 <- function(x) f(log(x))/x
 x=seq(0,10,by=.025)
-plot(x,f(x), ylim=c(0, 1.3), xlim=c(0, 10), main="Theoretial densities",
+plot(x,f(x), ylim=c(0, 1.3), xlim=c(0, 10), main="Theoretical densities",
      lwd=2, type="l", xlab="x", ylab="")
 lines(x,f1(x), lty=2, lwd=2)
 lines(x,f2(x), lty=3, lwd=2)
@@ -273,7 +274,7 @@ legend("topright", lty=1:4, col=c(rep("black", 4), rep("grey", 3)),
 
 $$f_X(x) = \mathbb{1}_{[0,1]}(x) $$
 
-É usada para gerar amostra de outras distribuições de probabilidade (se $U\sim Unif(0,1)$, $Y = F_X(U)^{-1}$ tem distribuição $F_X$).
+É usada para gerar amostra de outras distribuições de probabilidade (se $U\sim Unif(0,1)$, $Y = F_X(U)^{-1}$ tem distribuição $F_X$ ).
 
 No R: `?dunif`
 
