--- a/public/hw/hw-02.Rmd
+++ b/public/hw/hw-02.Rmd
@@ -92,6 +92,6 @@ x = runif(20,-1,1)
 
 
 
-<!-- ## Resolução -->
+## Resolução
 
-<!-- Sugestão de respostas: [Resolução Lista 2](./resolucao/lista-02-resolucao.html) -->
+Sugestão de respostas: [Resolução Lista 2](./resolucao/lista-02-resolucao.html)
