--- a/public/hw/hw-03.Rmd
+++ b/public/hw/hw-03.Rmd
@@ -60,7 +60,7 @@ mpg
 6) Quais variáveis do banco de dados são categóricas? Quais variáveis são contínuas? (Dica: use o comando `?mpg` para ver a descrição do banco).
 
 
-7) Refaça os gráficos feitos em sala para verificar a relação entre a capacidade do motor (`displ`) e o consumo do carro (`mpg`), mas com cores diferentes de acordo com o tipo de direção do carro. O que você observa na relação entre essas três variáveis?
+7) Refaça os gráficos feitos em sala para verificar a relação entre a capacidade do motor (`displ`) e o consumo do carro (`mpg`), mas com cores diferentes de acordo com o tipo de tração (`drv`) do carro. O que você observa na relação entre essas três variáveis?
 
 
 8) Refaça o gráfico do exercício anterior, mas separe em diferentes painéis os pontos de cada tipo de direção usando o comando `facet_grid()`. Você acha que essa visualização facilita a comparação dos diferentes grupos de carros?
