--- a/static/slides/09-inferencia_pt2.Rmd
+++ b/static/slides/09-inferencia_pt2.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "11 de abril de 2018"
+date: "19 de janeiro de 2021"
 subtitle: "09 - Inferência"
 
 output:
@@ -11,7 +11,7 @@ output:
     highlight: pygments
     logo: img/logo_ufmg.png
     widescreen: true
-    self_contained: false
+    self_contained: true
     lib_dir: libs
   beamer_presentation:
     highlight: pygments
@@ -153,8 +153,8 @@ mix1
 ```{r warning=FALSE, message=FALSE}
 ## outra maneira - algoritmo EM
 require(mixtools)
-mix2 = normalmixEM(X)
-c(mix2$lambda[1], mix2$mu, mix2$sigma)
+mix2 = normalmixEM(X, lambda=0.5)
+(mix2_vec = c(mix2$lambda[1], mix2$mu, mix2$sigma))
 
 ```
 
@@ -168,8 +168,10 @@ hist(X, freq=F, main="Histograma da altura", ylim=c(0,0.05))
 lines(aux, dnorm(aux, mean=param[1], sd=param[2]), lwd=2, col=2, lty=2)
 lines(aux, mix1[1]*dnorm(aux,mix1[2],mix1[4]) + (1-mix1[1])*dnorm(aux,mix1[3],mix1[5]),
       lwd=2, col=4)
+lines(aux, mix2_vec[1]*dnorm(aux,mix2_vec[2],mix2_vec[4]) + (1-mix2_vec[1])*dnorm(aux,mix2_vec[3],mix2_vec[5]),
+      lwd=2, col=5)
 lines(density(X), lwd=2, lty=4)
-legend("topright", leg=c("Normal","Mistura Normais","Kernel"), lwd=2, lty=c(2,1,4), col=c(2,4,1), bty="n")
+legend("topright", leg=c("Normal","Mistura Normais EMV","Mistura Normais EM","Kernel"), lwd=2, lty=c(2,1,1,4), col=c(2,4,5,1), bty="n")
 ```
 
 
@@ -218,8 +220,9 @@ lines(aux, dnorm(aux, mean=param[1], sd=param[2]), lwd=2, col=2, lty=2)
 lines(aux, mix1[1]*dnorm(aux,mix1[2],mix1[4]) + (1-mix1[1])*dnorm(aux,mix1[3],mix1[5]),
       lwd=2, col=4)
 lines(density(X), lwd=2, lty=4)
-lines(aux, pM*dnorm(aux,paramM[1],paramM[2])+(1-pM)*dnorm(aux,paramF[1],paramF[2]), col="green3", lwd=2)
-legend("topright", leg=c("Normal","Mistura Normais","Kernel"), lwd=2, lty=c(2,1,4,1), col=c(2,4,1,"green3"), bty="n")
+lines(aux, pM*dnorm(aux,paramM[1],paramM[2])+(1-pM)*dnorm(aux,paramF[1],paramF[2]), col=3, lwd=2)
+legend("topright", leg=c("Normal","Mistura Normais EMV","Mistura Normais por Sexo" ,"Kernel"),
+       lwd=2, lty=c(2,1,1,4), col=c(2,4,3,1), bty="n")
 
 ```
 
