--- a/public/slides/10-aprendizagem_estatistica.Rmd
+++ b/public/slides/10-aprendizagem_estatistica.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "16 de abril de 2018"
+date: "21 de janeiro de 2021"
 subtitle: "10 - Aprendizagem Estatística"
 
 output:
@@ -245,7 +245,7 @@ credit.f$duration = cut(credit.f$duration,c(0,15,36,Inf))
 
 ## Análise Descritiva - Correlação
 
-- Agora vamos calcular a estatística V de Cramer entre a <span class="blue">variável reposta</span> e todas as <span class="blue">covariáveis</span>.
+- Agora vamos calcular a estatística V de Cramer entre a <span class="blue">variável resposta</span> e todas as <span class="blue">covariáveis</span>.
 
 - Primeiro, vamos criar uma função para calcular a **estatística V de Cramer** entre cada covariável e `class`:
 
