--- a/public/slides/11-aprendizagem_estatistica_pt2.Rmd
+++ b/public/slides/11-aprendizagem_estatistica_pt2.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "18 de abril de 2018"
+date: "26 de janeiro de 2021"
 subtitle: "11 - Aprendizagem Estatística"
 
 output:
