--- a/static/slides/13-tabelas.Rmd
+++ b/static/slides/13-tabelas.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "25 de abril de 2018"
+date: "02 de fevereiro de 2021"
 subtitle: "13 - Tabelas de Vida"
 
 output:
