--- a/static/hw/hw-03.Rmd
+++ b/static/hw/hw-03.Rmd
@@ -66,7 +66,7 @@ mpg
 8) Refaça o gráfico do exercício anterior, mas separe em diferentes painéis os pontos de cada tipo de direção usando o comando `facet_grid()`. Você acha que essa visualização facilita a comparação dos diferentes grupos de carros?
 
 
-<!-- ## Resolução -->
+## Resolução
 
-<!-- Sugestão de respostas: [Resolução Lista 3](./resolucao/lista-03-resolucao.html) -->
+Sugestão de respostas: [Resolução Lista 3](./resolucao/lista-03-resolucao.html)
 
