--- a/static/slides/19-portfolios_pt2.Rmd
+++ b/static/slides/19-portfolios_pt2.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "04 de junho de 2018"
+date: "04 de março de 2021"
 subtitle: "19 - Portfólios (parte 2)"
 
 output:
