--- a/public/slides/21-tarifacao_pt2.Rmd
+++ b/public/slides/21-tarifacao_pt2.Rmd
@@ -2,7 +2,7 @@
 title: "Métodos Computacionais para Análise de Risco"
 author: 'Prof.: Thais Paiva'
 
-date: "11 de junho de 2018"
+date: "11 de março de 2021"
 subtitle: "21 - Tarifação (parte 2)"
 
 output:
